@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.2 2018/12/21 12:53:49 wen Exp $
+$NetBSD: distinfo,v 1.3 2019/07/31 19:49:55 brook Exp $
 
-SHA1 (R/lme4_1.1-19.tar.gz) = 2b7f7060e970dd58fce1138d8e7aa70c4f1a9197
-RMD160 (R/lme4_1.1-19.tar.gz) = ca3ef68788a45cac5d8a2a99a3a6706c30b6b713
-SHA512 (R/lme4_1.1-19.tar.gz) = 4e27ab14b91b6349a0923a80d5ee1a0e2549a6ec7f133cfafb45fb28921c6f4249af8fc97bd4d80e841d5da586af3d4ebe15bb764f8a4ce6b52eb71c67e310c7
-Size (R/lme4_1.1-19.tar.gz) = 4120276 bytes
+SHA1 (R/lme4_1.1-21.tar.gz) = 489052d369d8cfb8d69807f480e4be33eb64955a
+RMD160 (R/lme4_1.1-21.tar.gz) = eb6bc5ff9a2aebe1554dd839d7fef41a94d31806
+SHA512 (R/lme4_1.1-21.tar.gz) = 6aa61c032731b585e262f52d2051aa2e9c424ec6f797a0073d4b6fb254a2fea28daeadb24e2e0e3522bd9929a4ce50a9899444570ccbd156ddcea9063cac2d13
+Size (R/lme4_1.1-21.tar.gz) = 4124154 bytes
