@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3182 2019/07/31 19:47:01 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3183 2019/07/31 19:49:55 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5139,3 +5139,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-gtools to 3.8.1 [brook 2019-07-31]
 	Updated math/R-httpRequest to 0.0.10 [brook 2019-07-31]
 	Updated math/R-igraph to 1.2.4.1 [brook 2019-07-31]
+	Updated math/R-lme4 to 1.1.21 [brook 2019-07-31]
